--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" ng-app="bims">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,11 +27,11 @@
         </div>
       
         <ul class="nav navbar-nav">
-          <li class="dropdown">
-            <button type="button" class="btn btn-primary navbar-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">HOME    
+          <li class="btn-group" uib-dropdown uib-keyboard-nav>
+            <button type="button" class="btn btn-primary navbar-btn" uib-dropdown-toggle aria-haspopup="true" aria-expanded="false">HOME    
               <span class="caret"></span>
             </button>
-            <ul class="dropdown-menu ">
+            <ul class="uib-dropdown-menu" role="menu">
               <li><a href="#">SERVICE CENTER</a></li>
               <li><a href="#">WORK ORDER MANAGEMENT</a></li>
               <li><a href="#">SITE INSPECTION MANAGEMENT</a></li>
@@ -53,25 +53,30 @@
               <!--span class="badge">6</span-->
             </button>
           </li>
-          <li class="dropdown">
-            <a href="#" class="navbar-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-target="#">ceshi<span class="caret"></span></a>
-            <ul class="dropdown-menu">
+          <li class="dropdown" uib-dropdown uib-keyboard-nav>
+            <a href="#" class="navbar-link" uib-dropdown-toggle aria-haspopup="true" aria-expanded="false" data-target="#">ceshi<span class="caret"></span></a>
+            <ul class="uib-dropdown-menu">
               <li><a href="#"><span class="glyphicon glyphicon-user" aria-hidden="true"></span>Personal Information</a></li>
-              <li><a href="login.html"><span class="glyphicon glyphicon-off" aria-hidden="true"></span>Exit</a></li>
+              <li><a href="pages/login.html"><span class="glyphicon glyphicon-off" aria-hidden="true"></span>Exit</a></li>
             </ul>
           </li>
         </ul>
       
       </div>
     </nav>
+    <div id="main" ng-controller="mainController as main">
+        <div ng-view></div>
+    </div>
+    <uib-tabset justified="true">
+        <uib-tab heading="Work Order Management"></uib-tab>
+        <uib-tab heading="Work Order Approval"></uib-tab>
+        <uib-tab heading="Work Order View"></uib-tab>
+        <uib-tab heading="Work Order Basic"></uib-tab>
+    </uib-tabset>
 
-    <ul class="nav nav-tabs">
-      <li role="presentation" class="active"><a href="#">Work Order Management</a></li>
-      <li role="presentation"><a href="#">Work Order Approval</a></li>
-      <li role="presentation"><a href="#">Work Order View</a></li>
-      <li role="presentation"><a href="#">Work Order Basic</a></li>
-    </ul>
-    <script src="extlib/jquery/jquery-1.11.3.min.js"></script>
-    <script src="extlib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="extlib/angular/angular.min.js"></script>
+    <script src="extlib/angular/angular-route.min.js"></script>
+    <script src="extlib/angular/ui-bootstrap-tpls-0.14.0.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
